--- a/Juerka-Sound-Recognition/CMakeLists.txt
+++ b/Juerka-Sound-Recognition/CMakeLists.txt
@@ -3,12 +3,47 @@
 #
 
 # ソースをこのプロジェクトの実行可能ファイルに追加します。
-add_executable (Juerka-Sound-Recognition "Juerka-Sound-Recognition.cpp" "Juerka-Sound-Recognition.h")
+find_package(MKL CONFIG REQUIRED PATHS $ENV{MKLROOT})
 
-target_link_libraries(Juerka-Sound-Recognition Juerka-core)
+add_executable(Juerka-Sound-Recognition-Voice-Recognition-Test-1
+	"test/voice_recognition_test_1.cpp" "CurrentGenerator/Fft.cpp"
+	"CurrentGenerator/Fft.h" "CurrentGenerator/SoundDataManager.h"
+	"CurrentGenerator/Common.h" "CurrentGenerator/SoundDataManager.cpp"
+	"CurrentGenerator/SoundCurrentGenerator.h")
 
-if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET Juerka-Sound-Recognition PROPERTY CXX_STANDARD 20)
-endif()
+target_include_directories(Juerka-Sound-Recognition-Voice-Recognition-Test-1 PUBLIC "../Juerka/CommonNet")
+target_include_directories(Juerka-Sound-Recognition-Voice-Recognition-Test-1 PUBLIC "../Juerka/Utility")
+target_include_directories(Juerka-Sound-Recognition-Voice-Recognition-Test-1 PUBLIC "CurrentGenerator")
 
-# TODO: テストを追加し、必要な場合は、ターゲットをインストールします。
+set_property(TARGET Juerka-Sound-Recognition-Voice-Recognition-Test-1 PROPERTY CXX_STANDARD 20)
+
+target_link_libraries(Juerka-Sound-Recognition-Voice-Recognition-Test-1 PUBLIC Juerka-core MKL::MKL)
+
+add_executable(Juerka-Sound-Recognition-Voice-Recognition-Test-2
+	"test/voice_recognition_test_2.cpp" "CurrentGenerator/Fft.cpp"
+	"CurrentGenerator/Fft.h" "CurrentGenerator/SoundDataManager.h"
+	"CurrentGenerator/Common.h" "CurrentGenerator/SoundDataManager.cpp"
+	"CurrentGenerator/SoundCurrentGenerator.h")
+
+target_include_directories(Juerka-Sound-Recognition-Voice-Recognition-Test-2 PUBLIC "../Juerka/CommonNet")
+target_include_directories(Juerka-Sound-Recognition-Voice-Recognition-Test-2 PUBLIC "../Juerka/Utility")
+target_include_directories(Juerka-Sound-Recognition-Voice-Recognition-Test-2 PUBLIC "CurrentGenerator")
+
+set_property(TARGET Juerka-Sound-Recognition-Voice-Recognition-Test-2 PROPERTY CXX_STANDARD 20)
+
+target_link_libraries(Juerka-Sound-Recognition-Voice-Recognition-Test-2 PUBLIC Juerka-core MKL::MKL)
+
+add_executable(Juerka-Sound-Recognition-Voice-Recognition-Test-3
+	"test/voice_recognition_test_3.cpp" "CurrentGenerator/Fft.cpp"
+	"CurrentGenerator/Fft.h" "CurrentGenerator/SoundDataManager.h"
+	"CurrentGenerator/Common.h" "CurrentGenerator/SoundDataManager.cpp"
+	"CurrentGenerator/SoundCurrentGenerator.h")
+
+target_include_directories(Juerka-Sound-Recognition-Voice-Recognition-Test-3 PUBLIC "../Juerka/CommonNet")
+target_include_directories(Juerka-Sound-Recognition-Voice-Recognition-Test-3 PUBLIC "../Juerka/Utility")
+target_include_directories(Juerka-Sound-Recognition-Voice-Recognition-Test-3 PUBLIC "CurrentGenerator")
+
+set_property(TARGET Juerka-Sound-Recognition-Voice-Recognition-Test-3 PROPERTY CXX_STANDARD 20)
+
+target_link_libraries(Juerka-Sound-Recognition-Voice-Recognition-Test-3 PUBLIC Juerka-core MKL::MKL)
+
