modified .gitmodules(ssh to https).

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 
 [submodule "Juerka"]
 	path = Juerka
-	url = git@github.com:Junichi-Juerka-Suzuki/Juerka.git
+	url = https://github.com/Junichi-Juerka-Suzuki/Juerka.git
